CREATE : til_list
TIL 리스트 구현했습니다.
검색도 됩니다.
마이 드롭다운에 내 TIL도 적용됩니다.

--- a/static/styles.css
+++ b/static/styles.css
@@ -32,7 +32,12 @@ footer {
     color: var(--normal-color);
     text-align: left;
     padding: 10px 20px;
-    position: fixed;
+
+    padding-top: 150px;
+    margin-top: 160px;
+    position: relative;
+    transform: translatY(-100%);
+
     bottom: 0;
     width: 100%;
 }
