--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -1,3 +1,10 @@
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<script>
+  alert("{{ messages[-1] }}")
+</script>
+{% endif %}
+{% endwith %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,6 +14,7 @@
   <title>TIL_List</title>
   <link href="../static/styles.css" rel="stylesheet" type="text/css" />
   <link href="../static/til_list.css" rel="stylesheet" type="text/css" />
+  <link href="../static/main.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -38,16 +46,57 @@
   </div>
   <!-- ---------------------------------------------------------------------------------------- -->
   <div class="search_box">
-    <input type="text">
-    <button type="submit" class="submit_btn">Search</button>
+    <form id="searchForm" action="" method="GET">
+      <input type="text" name="condition" id="condition">
+      <button type="submit" class="submit_btn" onclick="submitForm()">Search</button>
+    </form>
   </div>
-  <div class="til_lists">
-    {% for til in data['lists'] %}
-    <div class="til_box">
-      <p>{{ til['thumbnail'] }}</p>
-      <br><a href="post/{{ til['title'] }}">{{ til['title'] }}</a>
+
+  <div class="til_list">
+    <div class="til_card-container">
+      {% for til in data['til_list'] %}
+      <div class="til_card">
+        <div class="front">
+          <!-- 앞면 내용 -->
+          {% if til['thumbnail'] != None %}
+            <img src="{{ til['thumbnail'] }}" class="thumbnail">
+          {% else %}
+            <img src="../static/image/basic_image.png" class="thumbnail">
+          {% endif %}
+          <h3>{{ til['title'] }}</h3>
+        </div>
+        <div class="back">
+          <!-- 뒷면 내용 -->
+          <p>{{ til['contents'] }}</p>
+          <p>Likes: {{ til['like_cnt'] }}</p>
+          <p>Posted by: {{ til['user_id'] }} on {{ til['reg_date'] }}</p>
+          <br><a href="../post/{{ til['id'] }}">TIL 보러가기</a>
+        </div>
+      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
+
+    <div class="pagination_container">
+      <ul class="pagination">
+        {% if data['now_page'] != 1 %}
+          <li class="{{ 'disabled' if data['now_page'] == pages else '' }}">
+              <a href="{{ url_for('til_list', page_num=data['now_page']-1) }}">Prev</a>
+          </li>
+        {% endif %}
+
+        {% for i in range(1, data['max_page']+1) %}
+            <li class="{{ 'active' if i == data['now_page'] else '' }}">
+                <a href="{{ url_for('til_list', page_num=i) }}">{{ i }}</a>
+            </li>
+        {% endfor %}
+
+        {% if data['now_page'] != data['max_page'] %}
+          <li class="{{ 'disabled' if data['now_page'] == pages else '' }}">
+              <a href="{{ url_for('til_list', page_num=data['now_page']+1) }}">Next</a>
+          </li>
+        {% endif %}
+      </ul>
+    </div>
   </div>
 
   <!-- ---------------------------------------------------------------------------------------- -->
@@ -63,6 +112,16 @@
       <img src="{{ url_for('static', filename='image/notion-logo.png') }}"> Notion
     </a>
   </footer>
+
+  <script>
+    function submitForm() {
+        var conditionValue = document.getElementById('condition').value;
+        var form = document.getElementById('searchForm');
+
+        form.action = '/til_list/1&'+conditionValue.toString()
+
+    }
+  </script>
 </body>
 
 </html>
