--- a/static/leaderboard.css
+++ b/static/leaderboard.css
@@ -3,6 +3,7 @@
     max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
+    border-radius: 20px;
 }
 
 .leaderboard {
@@ -11,35 +12,47 @@
     border: 1px solid #ccc;
     padding: 20px;
     text-align: left;
+    border-radius: 20px;
+    box-sizing: border-box;
 }
 .rank-item {
     margin-bottom: 10px;
     padding: 20px;
     border-bottom: 1px solid #ccc;
     text-align: left;
+    border-radius: 20px;
 }
 .pagination {
     list-style: none;
     padding: 0;
     display: flex;
     justify-content: center;
+    bottom: 200px;
 }
 .pagination li {
-    margin-right: 5px;
+    margin-right: 10px;
+    position: fixed;
+    bottom: 200px;
 }
 .pagination li a, .pagination li span {
     display: inline-block;
-    padding: 5px 10px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
     color: #333;
     text-decoration: none;
+    position: fixed;
+    bottom: 200px;
 }
 .pagination li.active span {
     background-color: #007bff;
     color: #fff;
     border-color: #007bff;
+    position: fixed;
+    bottom: 200px;
 }
 .pagination li a:hover {
     background-color: #f0f0f0;
+    position: fixed;
+    bottom: 200px;
 }
