--- a/templates/main.html
+++ b/templates/main.html
@@ -55,17 +55,17 @@
         <div class="front">
           <!-- 앞면 내용 -->
           {% if latest_til['thumbnail'] != None %}
-            <img src="{{ latest_til['thumbnail'] }}" class="thumbnail">
+          <img src="{{ latest_til['thumbnail'] }}" class="thumbnail">
           {% else %}
-            <img src="../static/image/basic_image.png" class="thumbnail">
+          <img src="../static/image/basic_image.png" class="thumbnail">
           {% endif %}
           <h3>{{ latest_til['title'] }}</h3>
         </div>
         <div class="back">
           <!-- 뒷면 내용 -->
-          <p>{{ latest_til['contents'] }}</p>
+          <p>{{ latest_til['user_id'] }}</p>
           <p>Likes: {{ latest_til['like_cnt'] }}</p>
-          <p>Posted by: {{ latest_til['user_id'] }} on {{ latest_til['reg_date'] }}</p>
+          <p>Posted by: {{ latest_til['reg_date'] }}</p>
           <br><a href="post/{{ latest_til['id'] }}">TIL 보러가기</a>
         </div>
       </div>
