--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -59,17 +59,17 @@
         <div class="front">
           <!-- 앞면 내용 -->
           {% if til['thumbnail'] != None %}
-            <img src="{{ til['thumbnail'] }}" class="thumbnail">
+          <img src="{{ til['thumbnail'] }}" class="thumbnail">
           {% else %}
-            <img src="../static/image/basic_image.png" class="thumbnail">
+          <img src="../static/image/basic_image.png" class="thumbnail">
           {% endif %}
           <h3>{{ til['title'] }}</h3>
         </div>
         <div class="back">
           <!-- 뒷면 내용 -->
-          <p>{{ til['contents'] }}</p>
+          <p>{{ til['user_id'] }}</p>
           <p>Likes: {{ til['like_cnt'] }}</p>
-          <p>Posted by: {{ til['user_id'] }} on {{ til['reg_date'] }}</p>
+          <p>Posted by: {{ til['reg_date'] }}</p>
           <br><a href="../post/{{ til['id'] }}">TIL 보러가기</a>
         </div>
       </div>
@@ -79,21 +79,21 @@
     <div class="pagination_container">
       <ul class="pagination">
         {% if data['now_page'] != 1 %}
-          <li class="{{ 'disabled' if data['now_page'] == pages else '' }}">
-              <a href="{{ url_for('til_list', page_num=data['now_page']-1) }}">Prev</a>
-          </li>
+        <li class="{{ 'disabled' if data['now_page'] == pages else '' }}">
+          <a href="{{ url_for('til_list', page_num=data['now_page']-1) }}">Prev</a>
+        </li>
         {% endif %}
 
         {% for i in range(1, data['max_page']+1) %}
-            <li class="{{ 'active' if i == data['now_page'] else '' }}">
-                <a href="{{ url_for('til_list', page_num=i) }}">{{ i }}</a>
-            </li>
+        <li class="{{ 'active' if i == data['now_page'] else '' }}">
+          <a href="{{ url_for('til_list', page_num=i) }}">{{ i }}</a>
+        </li>
         {% endfor %}
 
         {% if data['now_page'] != data['max_page'] %}
-          <li class="{{ 'disabled' if data['now_page'] == pages else '' }}">
-              <a href="{{ url_for('til_list', page_num=data['now_page']+1) }}">Next</a>
-          </li>
+        <li class="{{ 'disabled' if data['now_page'] == pages else '' }}">
+          <a href="{{ url_for('til_list', page_num=data['now_page']+1) }}">Next</a>
+        </li>
         {% endif %}
       </ul>
     </div>
@@ -115,10 +115,10 @@
 
   <script>
     function submitForm() {
-        var conditionValue = document.getElementById('condition').value;
-        var form = document.getElementById('searchForm');
+      var conditionValue = document.getElementById('condition').value;
+      var form = document.getElementById('searchForm');
 
-        form.action = '/til_list/1&'+conditionValue.toString()
+      form.action = '/til_list/1&' + conditionValue.toString()
 
     }
   </script>
