CREATE : 수정, 삭제 기능
게시글 수정 삭제가 가능합니다.
몇몇 버그를 수정했습니다.

--- a/static/til_list.css
+++ b/static/til_list.css
@@ -53,6 +53,13 @@
 }
 
 .pagination_container{
+    max-width: 2000px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: var(--middle-color);
+    color: var(--accent-color);
+    padding: 20px;
+    margin: 30px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
