--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -31,10 +31,10 @@
       <ul>
         <li><a href="#">My</a>
           <ul class="dropdown">
-            <li><a href="/my_page">내 정보</a></li>
-            <li><a href="/til_list['user_id']">내 TIL</a></li>
-            <li><a href="/write">글 작성</a></li>
             {% if 'meminfo' in data['session'] %}
+            <li><a href="/my_page">내 정보</a></li>
+            <li><a href="/til_list/1&{{ data['session']['meminfo']['id'] }}">내 TIL</a></li>
+            <li><a href="/write">글 작성</a></li>
             <li><a href="/logout">로그아웃</a></li>
             {% else %}
             <li><a href="/login">로그인</a></li>
@@ -76,7 +76,9 @@
       {% endfor %}
     </div>
 
+
     <div class="pagination_container">
+
       <ul class="pagination">
         {% if data['now_page'] != 1 %}
           <li class="{{ 'disabled' if data['now_page'] == pages else '' }}">
@@ -96,7 +98,9 @@
           </li>
         {% endif %}
       </ul>
+
     </div>
+
   </div>
 
   <!-- ---------------------------------------------------------------------------------------- -->
