--- a/static/leaderboard.css
+++ b/static/leaderboard.css
@@ -4,6 +4,7 @@
     margin: 20px auto;
     padding: 20px;
     border-radius: 20px;
+    margin-bottom: 50px;
 }
 
 .leaderboard {
@@ -22,37 +23,51 @@
     text-align: left;
     border-radius: 20px;
 }
-.pagination {
+
+.pagination { 
     list-style: none;
     padding: 0;
     display: flex;
     justify-content: center;
-    bottom: 200px;
+    padding: 10px 20px;
+    left: 50%; 
+    transform: translateX(-50%); /* 가로 가운데 정렬 */
+    margin-top: 40px; /* 변경된 간격 */
+    margin-bottom: 5px; /* 추가된 간격 */
 }
+
 .pagination li {
-    margin-right: 10px;
-    position: fixed;
-    bottom: 200px;
+    padding: 10px 20px;
+  /* 고정 위치 설정 */
+    left: 50%; /* 가운데 정렬을 위해 가로 가운데 위치로 이동 */
+    transform: translateX(-50%); /* 가로 가운데 정렬 */
 }
 .pagination li a, .pagination li span {
+   /* 고정 위치 설정 */
+    padding: 10px 20px;
+    left: 50%; /* 가운데 정렬을 위해 가로 가운데 위치로 이동 */
+    transform: translateX(-50%); /* 가로 가운데 정렬 */
     display: inline-block;
-    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 3px;
     color: #333;
     text-decoration: none;
-    position: fixed;
-    bottom: 200px;
+    
 }
 .pagination li.active span {
-    background-color: #007bff;
+
+     /* 고정 위치 설정 */
+    left: 50%; /* 가운데 정렬을 위해 가로 가운데 위치로 이동 */
+    transform: translateX(-50%); /* 가로 가운데 정렬 */
+    background-color: var(--accent-color);
     color: #fff;
-    border-color: #007bff;
-    position: fixed;
-    bottom: 200px;
+    border-color: var(--accent-color);
+    padding: 10px 20px;
+    
 }
-.pagination li a:hover {
+.pagination li a:hover { /* 고정 위치 설정 */
+    left: 50%; /* 가운데 정렬을 위해 가로 가운데 위치로 이동 */
+    transform: translateX(-50%); /* 가로 가운데 정렬 */
     background-color: #f0f0f0;
-    position: fixed;
-    bottom: 200px;
+    padding: 10px 20px;
 }
