--- a/templates/main.html
+++ b/templates/main.html
@@ -50,26 +50,30 @@
   <div class="container">
     <h2>Latest TIL List</h2>
     <div class="card-container">
-      {% for latest_til in data['latest_til'][:3] %}
-      <div class="til_card">
-        <div class="front">
-          <!-- 앞면 내용 -->
-          {% if latest_til['a.thumbnail'] != None %}
-            <img src="{{ latest_til['a.thumbnail'] }}" class="thumbnail">
-          {% else %}
-          <img src="../static/image/basic_image.png" class="thumbnail">
-          {% endif %}
-          <h3>{{ latest_til['a.title'] }}</h3>
+      {% if data['latest_til'][0] != None %}
+        {% for latest_til in data['latest_til'][:3] %}
+        <div class="til_card">
+          <div class="front">
+            <!-- 앞면 내용 -->
+            {% if latest_til['a.thumbnail'] != None %}
+              <img src="{{ latest_til['a.thumbnail'] }}" class="thumbnail">
+            {% else %}
+            <img src="../static/image/basic_image.png" class="thumbnail">
+            {% endif %}
+            <h3>{{ latest_til['a.title'] }}</h3>
+          </div>
+          <div class="back">
+            <!-- 뒷면 내용 -->
+            <p>{{ latest_til['b.username'] }}</p>
+            <p>Likes: {{ latest_til['a.like_cnt'] }}</p>
+            <p>Posted by: {{ latest_til['b.username'] }} on {{ latest_til['a.reg_date'] }}</p>
+            <br><a href="post/{{ latest_til['a.id'] }}">TIL 보러가기</a>
+          </div>
         </div>
-        <div class="back">
-          <!-- 뒷면 내용 -->
-          <p>{{ latest_til['a.contents'] }}</p>
-          <p>Likes: {{ latest_til['a.like_cnt'] }}</p>
-          <p>Posted by: {{ latest_til['a.user_id'] }} on {{ latest_til['a.reg_date'] }}</p>
-          <br><a href="post/{{ latest_til['a.id'] }}">TIL 보러가기</a>
-        </div>
-      </div>
-      {% endfor %}
+        {% endfor %}
+      {% else %}
+        <h1>게시글이 없습니다ㅠ</h1>
+      {% endif %}
     </div>
   </div>
 
