--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -54,26 +54,30 @@
 
   <div class="til_list">
     <div class="til_card-container">
-      {% for til in data['til_list'] %}
-      <div class="til_card">
-        <div class="front">
-          <!-- 앞면 내용 -->
-          {% if til['a.thumbnail'] != None %}
-            <img src="{{ til['a.thumbnail'] }}" class="thumbnail">
-          {% else %}
-          <img src="../static/image/basic_image.png" class="thumbnail">
-          {% endif %}
-          <h3>{{ til['a.title'] }}</h3>
+      {% if data['til_list'][0] != None %}
+        {% for til in data['til_list'] %}
+        <div class="til_card">
+          <div class="front">
+            <!-- 앞면 내용 -->
+            {% if til['a.thumbnail'] != None %}
+              <img src="{{ til['a.thumbnail'] }}" class="thumbnail">
+            {% else %}
+            <img src="../static/image/basic_image.png" class="thumbnail">
+            {% endif %}
+            <h3>{{ til['a.title'] }}</h3>
+          </div>
+          <div class="back">
+            <!-- 뒷면 내용 -->
+            <p>{{ til['b.username'] }}</p>
+            <p>Likes: {{ til['a.like_cnt'] }}</p>
+            <p>Posted by: {{ til['b.username'] }} on {{ til['a.reg_date'] }}</p>
+            <br><a href="../post/{{ til['a.id'] }}">TIL 보러가기</a>
+          </div>
         </div>
-        <div class="back">
-          <!-- 뒷면 내용 -->
-          <p>{{ til['a.contents'] }}</p>
-          <p>Likes: {{ til['a.like_cnt'] }}</p>
-          <p>Posted by: {{ til['a.user_id'] }} on {{ til['a.reg_date'] }}</p>
-          <br><a href="../post/{{ til['a.id'] }}">TIL 보러가기</a>
-        </div>
-      </div>
-      {% endfor %}
+        {% endfor %}
+      {% else %}
+      게시물이 없습니다ㅠ
+      {% endif %}
     </div>
 
 
