--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -37,6 +37,7 @@
     </div>
   </div>
   <!-- ---------------------------------------------------------------------------------------- -->
+  <!-- 데이터 출력 -->
   <div class="leader-list">
     <h2>Leaderboard</h2>
     <div class="leaderboard">
@@ -45,6 +46,29 @@
         {{message}}
       </div>
       {% endfor %}
+    </div>
+
+    <!-- 페이지네이션 코드-->
+    <div class="pagination">
+      <ul> <!-- 여기에 ul 요소를 추가해주세요 -->
+        {% if pagination.page > 1 %}
+        <li><a href="?page=1">처음</a></li> <!--첫 페이지 -->
+        <li><a href="?page={{ pagination.page - 1 }}">이전</a></li> <!-- 이전 페이지 -->
+        {% endif %}
+
+        {% for num in range(1, pagination.total_pages + 1) %}
+        {% if num == pagination.page %}
+        <li class="active"><span>{{ num }}</span></li> <!-- 현재 페이지 활성화 -->
+        {% else %}
+        <li><a href="?page={{ num }}">{{ num }}</a></li> <!-- 다른 페이지 이동 -->
+        {% endif %}
+        {% endfor %}
+
+        {% if pagination.page < pagination.total_pages %} <li><a href="?page={{ pagination.page + 1 }}">다음</a></li>
+          <!-- 다음 페이지 이동 -->
+          <li><a href="?page={{ pagination.total_pages }}">마지막</a></li> <!-- 마지막 이동 -->
+          {% endif %}
+      </ul> <!-- 여기에 ul 요소 닫기 -->
     </div>
   </div>
   <!-- ---------------------------------------------------------------------------------------- -->
