UPDATE : 몇몇 오류를 수정했습니다.

--- a/static/post.css
+++ b/static/post.css
@@ -1,5 +1,7 @@
 @import url("color.css");
-
+img{
+    width: 100%;
+}
 .post-container {
     background-color: var(--normal-color);
     width: 100%;
