--- a/templates/til_list.html
+++ b/templates/til_list.html
@@ -65,7 +65,7 @@
             {% else %}
             <img src="../static/image/basic_image.png" class="thumbnail">
             {% endif %}
-            <h3>{{ til['a.title'] }}</h3>
+            <h3>{{ til['a.title'][:10]+'...' if til['a.title']|length > 10 else til['a.title'] }}</h3>
           </div>
           <div class="back">
             <!-- 뒷면 내용 -->
