--- a/static/post.css
+++ b/static/post.css
@@ -12,6 +12,12 @@ img{
     box-shadow: 0 4px 8px var(--accent-color);
 }
 
+.comments_line{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 #post_contents li {
     position: relative;
     list-style-type: auto;
@@ -50,6 +56,10 @@ img{
     justify-content: space-between;
 }
 
+.del_btn_form{
+    margin-top: 15px;
+}
+
 .btn{
     background-color: var(--accent-color); 
     color: var(--normal-color); 
@@ -86,6 +96,7 @@ img{
     background: var(--normal-color);
     padding: 10px;
     margin: 10px 0;
+    width: 80%;
 }
 
 .container {
